Fix invert filter for devices with alpha color spaces

This patch implements a special callback for KisFilter that tells if
the filter wants to process fully transparent pixels of the device.
If that is the case, applyRect will contain the full image bounds.

BUG:349059
Fixes T2085